--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "sdks"]
 	path = sdks
-	url = ../oracle_javacard_sdks.git
+	url = https://github.com/martinpaljak/oracle_javacard_sdks.git
